# marvel_api_client

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/marvel_api_client/: __init__.py  marvel_api_client.py
tests/: test_marvel_api_client.py
